--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>脆弱性テスト</title>
 </head>
 <body>
-    <h1>脆弱性テストページ</h1>
+    <h1 id="userInput">脆弱性テストページ</h1>
     <p>このページには脆弱性があります。</p>
     <form action="javascript:void(0);">
         <label for="userInput">入力:</label>
